--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		url: "api/test/hello",
 		success: function(data) {
 			let message  = data['message'];
-			let tag = '<h1>' + message + '<h1>';
+			let tag = '<h1>' + message + 'x<h1>';
 			$('body').html(tag);
 			}
 			
