--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script>
 
 	$.ajax({
-		url: "api/test/hello",
+		url: "https://f717723d-fbf1-417a-bebb-e22447764772.mock.pstmn.io/info",
 		success: function(data) {
 			let message  = data['message'];
 			let tag = '<h1>' + message + 'x<h1>';
