dropdown on hover, drobne zmiany kosmetyczne

--- a/list/list.html
+++ b/list/list.html
@@ -6,7 +6,8 @@
         <title>x-wear.pl</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+        <link rel="stylesheet" type="text/css" href="drop.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald"> 
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="js/slider.js"></script>
         <script src="js/includehtml.js"></script> 
@@ -22,7 +23,7 @@
             <div id="slider" style="width: 100%;
                                     height: auto;
                                     border-radius: 25px;
-                                    margin-left: 40px;"></div>
+                                    margin-left: 25px;"></div>
             
             <div w3-include-html="views/main.html"></div> 
         </div>
