--- a/list/list.html
+++ b/list/list.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="drop.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald"> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="js/slider.js"></script>
         <script src="js/includehtml.js"></script> 
