--- a/list/list.html
+++ b/list/list.html
@@ -10,14 +10,14 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-        <script src="js/slider.js"></script>
-        <script src="js/includehtml.js"></script> 
+        <script src="../js/slider.js"></script>
+        <script src="../js/includehtml.js"></script> 
 
     </head>
     <body onload="slide()">
         
         
-        <div id="container" style="width: 85%; margin-left: auto; margin-right: auto;">
+        <div id="container" style="width: 70%; margin-left: auto; margin-right: auto;">
             <!-- HEADER -->
             <div w3-include-html="views/header.html"></div>
 
