--- a/produkt.html
+++ b/produkt.html
@@ -4,18 +4,18 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width = device-width, initial-scale = 1">
         <title>x-wear.pl</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="drop.css">
+        <link rel="stylesheet" type="text/css" href="style/singlestyle.css">
+        <link rel="stylesheet" type="text/css" href="style/drop.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <script src="../js/includehtml.js"></script>
-        <script src="../js/slider.js"></script>
+        <script src="js/includehtml.js"></script>
+        <script src="js/slider.js"></script>
     </head>
     <body onload="slide()">
 
         <div id="container">    
-            <div w3-include-html="views/header.html"></div>
+            <div w3-include-html="partial/header.html"></div>
             <div w3-include-html="views/single.html"></div>
         </div>
 
