--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<script src="js/slider.js"></script>
 		
     </head>
-    <body onload="slide()">
+    <body>
         
         
         <div id="container" style="width: 70%; margin-left: auto; margin-right: auto;">
