--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		
     </head>
-    <body>
+    <body onload="slide()">
         
         
         <div id="container" style="width: 70%; margin-left: auto; margin-right: auto;">
