--- a/list.html
+++ b/list.html
@@ -9,12 +9,12 @@
         <link rel="stylesheet" type="text/css" href="style/drop.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-        <script src="js/slider.js"></script>
-        <script src="js/includehtml.js"></script> 
+        <script src="js/includehtml.js"></script>
 
     </head>
-    <body onload="slide()">
+    <body>
         
         
         <div id="container" style="width: 70%; margin-left: auto; margin-right: auto;">
@@ -40,8 +40,6 @@
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script>includeHTML();</script>
     </body>
 </html>
